@@ -18,6 +18,7 @@ The format is based on [[https://keepachangelog.com/en/1.1.0/][Keep a Changelog]
   - Supported types: =integer=, =natnum=, =float=, =number=, =file=, =directory=, =symbol=, =sexp=
   - Path types (=file=, =directory=) automatically expand =~= and relative paths via =expand-file-name=
   - =:must-exist= constraint for =file= and =directory= types (validates path existence)
+  - =:extensions= constraint for =file= type (e.g., =:extensions '("el" "org")=)
   - =:on-change= and =:on-submit= receive typed values only when input is valid
   - =:on-error= callback receives =(error-msg raw-input)= on invalid input
   - Numeric constraints via =:min= and =:max=
